--- a/index.html
+++ b/index.html
@@ -277,12 +277,44 @@
                 <div class="col-md-6 offset-md-3 workexdescbox">
                     <div class="row">
                         <div class="col workexdesc">
+                            <h2>ImarketVend</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col workexdesc">
+                            <h3>FontEnd developer Intern.</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col workexdesc">
+                            <h4>August 2024</h4>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col workexdesc">
+                            <h5>At ImarketVend, I played a key role in developing a page builder software that enables
+                                end-users to create and
+                                customize web pages with Bootstrap components. Over the course of one month, I developed
+                                11 dynamic components,
+                                including accordions, paginations, and more, with real-time CSS customization
+                                capabilities. I implemented the logic for
+                                updating component styles dynamically through an offcanvas form and integrated Iro.js
+                                for an intuitive color-picking
+                                experience. This project showcased my ability to rapidly develop and deploy robust,
+                                user-friendly frontend features
+                                using Vanilla JavaScript.</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 offset-md-3 workexdescbox">
+                    <div class="row">
+                        <div class="col workexdesc">
                             <h2>Fannverse</h2>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col workexdesc">
-                            <h3>React-Native developer</h3>
+                            <h3>React-Native developer Intern.</h3>
                         </div>
                     </div>
                     <div class="row">
